apps/staging/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: traefik
  rules:
    - host: immich.hectorprokos.com
      http:
        paths:
          - backend:
              service:
                name: immich-server   # auto-created by the chart
                port:
                  number: 2283
            path: /
            pathType: Prefix
